--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.4.5",
-    "claudia-bot-builder": "^1.3.1"
+    "aws-sdk": "2.4.5",
+    "claudia-bot-builder": "1.3.1"
   }
 }
